--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./src/assets/logo.png">
+    <meta itemprop="name" content="Code with Amber">
+    <meta itemprop="description" content="Follow my journey as I continue to expand my skillset in software
+    development.">
+    <meta itemprop="image" content="./src/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="./src/assets/circle-logo.png">
     <title>Code with Amber</title>
+
   </head>
   <body>
     <div id="root"></div>
